Fix bold/strong styles being too dark

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -229,7 +229,13 @@ body {
   .error {
     color: hsl(320, 100%, 50%);
   }
+
+  strong{
+    color: $yellow;
+  }
 }
+
+
 
 @import 'bulma';
 @import '*';
